--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
 body { background-color: #e5e4e2; font-family: monospace; }
 
-h2.section_header { border-width: medium; border-style: ridge; }
-
 li { list-style-type: square; }
 
-#about { color: #000080; }
+.header { border-width: medium; border-style: ridge; text-align: center; }
 
-#funstuff { color : #551a8b; }
+.section { left: 25%; position: relative; width: 50%; }
 
-#interests { color: #006400; }
+.section p, .section ul { margin: 2%; }
+
+#about_header { color: #000080; }
+
+#funstuff_header { color: #551a8b; }
+
+#interests_header { color: #006400; }
+
+#links { text-align: center; }
 
 #name { color: #035096; text-align: center; }
 
-#projects { color: #c21e56; }
+#projects_header { color: #c21e56; }
 
-#ta { color: #daa520; }
+#ta_header { color: #daa520; }
